formal_grammar.bnf
program        → declaration* EOF ;

declaration    → classDecl
               | funDecl
               | varDecl
               | statement ;

classDecl      →  "class" IDENTIFIER "{" function* "}" ;

funDecl        → "fun" function ;
function       → IDENTIFIER "(" parameters? ")" block ;
parameters     → IDENTIFIER ( "," IDENTIFIER )* ;

varDecl        → "var" IDENTIFIER ( "=" expression )? ";" ;

statement      → exprStmt
               | ifStmt
               | printStmt
               | returnStmt
               | whileStmt
               | forStmt
               | breakStmt
               | block ;

block          → "{" declaration* "}" ;
exprStmt       → expression ";" ;

breakStmt      -> break ";"

ifStmt         → "if" "(" expression ")" statement
               ("else" statement)? ;
printStmt      → "print" expression ";" ;
whileStmt      → "while" "(" expression ")" statement ;
forStmt        → "for" "(" (varDecl | exprStmt | ";")
               expression? ";"
               expression? ")" statement ;

returnStmt     → "return" expression? ";" ;

expression     → comma ;
comma          → assignment ( "," assignment )* ;

assignment     → (call ".")? IDENTIFIER "=" assignment
               | condition ;
condition      → logic_or ( "?" expression ":" condition )?
               | logic_or
logic_or       → logic_and ("or" logic_end)* ;
logic_and      → equality ("and" equality)* ;

equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | call ;

call           → primary ( "(" arguments? ")" | "." IDENTIFIER )* ;

argument       → expression ( "," expression )* ;

primary        → NUMBER | STRING | "true" | "false" | "nil"
               | lambda
               | "(" expression ")" ;
               | IDENTIFIER ;

lambda         → "fun" "(" parameters? ")" block ;
